syntax = "proto3";

package benchmark;

option go_package = "github.com/go-portfolio/go-grpc-benchmark/proto;benchmark";

service BenchmarkService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc Stats(StatsRequest) returns (StatsResponse);
  rpc StreamPing(stream PingRequest) returns (stream PingResponse);
  rpc PushNotifications(PingRequest) returns (stream PingResponse);
  rpc AggregatePing(stream PingRequest) returns (PingResponse);
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

message StatsRequest {}

message StatsResponse {
  int32 totalRequests = 1;
  double avgLatencySec = 2;
}
